--- a/08-HTML/homework/styles/styles.css
+++ b/08-HTML/homework/styles/styles.css
@@ -7,11 +7,12 @@ img{
 #thirdDiv{
     height: 600px;
     width: 500;
-    background: aquamarine;
+    background: yellow;
     padding: 50px;
     border:1px solid blue;
 }
 #spanId{
     font-size: 18px;
     margin: 50px;
+    color: brown;
 }
